--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.8.0'
     id 'application'
+   // id 'jacoco'
 }
-
 group = 'ru.netology'
 version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
-
 dependencies {
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+
+    testImplementation 'junit:junit:4.13.1'
 }
 
 test {
-    useJUnitPlatform()
+    //useJUnitPlatform()
 }
 
 compileKotlin {
