--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.8.0'
     id 'application'
-   // id 'jacoco'
+    id 'jacoco'
 }
 group = 'ru.netology'
 version = '1.0-SNAPSHOT'
